--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
   <div class="projects-grid">
     <!-- PROJEKT 1 -->
    <article class="project-card fade-in">
-  <div class="project-thumb project-thumb-obscurius"></div>
+  <div class="project-thumb project-thumb-obscurius">
+    <img
+    src="images/Obscurius/Obscurius-cover.png"
+    alt="Obscurius logotyp"
+  />
+  </div>
 
   <div class="project-tag">Informationsdesign</div>
 
