Fix project thumbnails

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
    <article class="project-card fade-in">
   <div class="project-thumb project-thumb-obscurius">
     <img
-    src="images/Obscurius/Obscurius-cover.png"
-    alt="Obscurius logotyp"
+    src="images/Obscurius/obscurius-cover.png"
+    alt="obscurius logotyp"
   />
   </div>
 
@@ -129,10 +129,9 @@
     <!-- PROJEKT 2 -->
     <article class="project-card fade-in">
   <div class="project-thumb project-thumb-logo">
-  <img
-    src="images/glimmer/glimmer-cover.png"
-    alt="Glimmer logotyp"
-  />
+  <img 
+  src="images/glimmer/glimmer-cover.png"
+  alt="glimmer-cover"/>
 </div>
 
   <div class="project-tag">UX-design</div>
