Add Obscurius case page, Glimmer slider and Reclaim page

--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
     förmedla säsongernas känsla – från sommarens värme till det nordiska vinterljuset.
   </p>
 
-  <a class="project-link" href="#" rel="noopener">
-    Visa case →
-  </a>
+  <a class="project-link" href="obscurius.html">Visa case →</a>
+
 </article>
 
 
@@ -151,9 +150,8 @@
     Projektet avslutades med en heuristisk utvärdering.
   </p>
 
-      <a class="project-link" href="#" rel="noopener">
-        Visa case →
-      </a>
+      <a class="project-link" href="glimmer.html">Visa case →</a>
+
     </article>
 
    <!-- PROJEKT 3 -->
@@ -175,9 +173,8 @@
     Case och resultat publiceras när projektet är klart.
   </p>
 
-  <span class="project-link project-link-disabled" aria-disabled="true">
-    Kommer snart →
-  </span>
+  <a class="project-link" href="reclaim.html">Kommer snart →</a>
+
 </article>
   </div>
 </section>
